--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,8 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
 orjson==3.8.9
+psycopg==3.1.8
+psycopg-binary==3.1.8
 pydantic==1.10.7
 python-dotenv==1.0.0
 python-multipart==0.0.6
